# VenuxFix

./: README.md  settings.gradle
AndFixTest/: build.gradle
AndFixTest/src/androidTest/java/com/venustv/andfixtest/: ExampleInstrumentedTest.java
AndFixTest/src/main/: AndroidManifest.xml
AndFixTest/src/main/cpp/: CMakeLists.txt  andfix.cpp  common.h
AndFixTest/src/main/cpp/art/: art_5_0.h  art_5_1.h  art_6_0.h  art_7_0.h  art_method_replace_5_0.cpp  art_method_replace_7_0.cpp
AndFixTest/src/main/cpp/dalvik/: dalvik_method_replace.cpp
AndFixTest/src/main/java/com/venustv/andfixtest/: MainActivity.java  Tom.java  Tom_Fix.java
AndFixTest/src/main/res/layout/: activity_main.xml
AndFixTest/src/test/java/com/venustv/andfixtest/: ExampleUnitTest.java
FixDemo/: build.gradle
FixDemo/src/androidTest/java/com/venustv/venuxfix/: ExampleInstrumentedTest.java
FixDemo/src/main/: AndroidManifest.xml
FixDemo/src/main/java/com/venustv/venuxfix/: FixApplication.java  MainActivity.java
FixDemo/src/main/res/layout/: activity_main.xml
FixDemo/src/test/java/com/venustv/venuxfix/: ExampleUnitTest.java
VenusAndFix/jni/: Application.mk  andfix.cpp
VenusAndFix/src/androidTest/java/com/venustv/venusfix/: ExampleInstrumentedTest.java
VenusAndFix/src/main/: AndroidManifest.xml
VenusAndFix/src/main/res/values/: strings.xml
dexposedj/jni/: Android.mk  Application.mk  dexposed.cpp  dexposed.h
dexposedj/libs/armeabi/: gdb.setup
dexposedj/src/main/: AndroidManifest.xml
dexposedj/src/main/res/values/: strings.xml
(+22 files in other folders)
